--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  --body-bg-color: #edf5fe;
+  --light-blue: #03a9f4;
+  --border-blue: #0288d147;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--body-bg-color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.hidden {
+  display: none;
 }
