--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,12 @@ code {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
+}
+
+button:focus {
+  outline: none;
+}
+a {
+  text-decoration: none;
 }
