--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--body-bg-color);
+  overflow: hidden;
 }
 
 code {
