--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--body-bg-color);
+  max-width: 100vw;
+  max-height: 100vh;
   overflow: hidden;
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
